# ploymarket_tool_auto1

./: Dockerfile  README.md  deploy.sh  docker-compose.yml  entrypoint_api.sh  entrypoint_app.sh  entrypoint_dashboard.sh  main.py  push.sh  pyproject.toml  server_install.sh  start.sh  stop.sh
backtest/: __init__.py  data_collector_historical.py  data_loader.py  engine.py  performance.py  walk_forward.py
config/: settings.py  settings.yaml
core/: exceptions.py  scheduler.py  system.py
data_ingestion/: __init__.py  base.py  manager.py  news_collector.py  polymarket_collector.py  sports_collector.py  whale_collector.py
database/: __init__.py  connection.py  models.py  redis_manager.py  repository.py
database/migrations/: alembic.ini  env.py
execution/: __init__.py  backtest_executor.py  base.py  live_executor.py  models.py  order_manager.py  paper_executor.py
notifications/: __init__.py  formatters.py  rate_limiter.py  telegram_bot.py
risk/: __init__.py  circuit_breaker.py  models.py  position_sizer.py  risk_rules.py  risk_state.py  stop_manager.py
scripts/: collect_history.py  run_backtest.py  seed_whale_list.py  setup.sh
signal_processing/: __init__.py  confidence_scorer.py  dedup_and_conflict.py  models.py  news_analyzer.py  pipeline.py  sports_analyzer.py
strategy/: __init__.py  base.py  info_asymmetry_strategy.py  models.py  orchestrator.py  sports_endgame_strategy.py  swing_strategy.py  tail_end_strategy.py  whale_follow_strategy.py
tests/: conftest.py  test_backtest_engine.py  test_confidence_scorer.py  test_info_asymmetry_strategy.py  test_integration_paper_flow.py  test_position_sizer.py  test_risk_rules.py  test_tail_end_strategy.py
web/: api.py  dashboard.html  dashboard_server.py  polytrader_v3.jsx
